public/stylesheets/application.css
@font-face {
  font-family: DINBold;
  src: url(/DIN_Bold.otf);
  font-weight: 400;
}

@font-face {
  font-family: DINRegular;
  src: url(/DIN_Regular.otf);
  font-weight: 400;
}

body {
  width: 520px;
  font-family: DINRegular, Helvetica, Arial, sans-serif;
}

h1 {
  font-weight: bold;
  font-size: 10px;
  margin: 5px 0 -4px 0;
}

h2 {
  font-weight: normal;
  color: #f65e38;
  font-size: 19px;
  margin: 0 0 20px 0;
}

h3 {
  font-size: 7px;
  color: gray;
  margin: 0;
}

h4 {
  font-size: 11px;
  color: gray;
  margin: 0;
}

h5 {
  font-size: 12px;
  color: black;
  font-weight: normal;
  margin: 0;
}

h6 {
  font-weight: bold;
  color: #292929;
  font-size: 14px;
  margin: 0 0 10px 0;
}

h5.left {
  display: inline;
}

p {
  color: #666666;
  font-size: 10px;
  margin: 0;
  padding-top: 5px;
  line-height: 15px;
}

li {
  list-style: none;
}

ul {
  padding: 0;
}

select {
  border: 1px solid #C3C3C3;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  background: #FBFBFB;
  -webkit-transition: border linear .2s,box-shadow linear .2s;
  -moz-transition: border linear .2s,box-shadow linear .2s;
  transition: border linear .2s,box-shadow linear .2s;
  width: 280px;
  margin-top: 5px;
  height: 25px;
}

#introduction_video {
  text-align: center;
}

#introduction_video p {
  margin-left: 380px;
}

#shields {
  margin-top: 5px;
}

#twitter h5 {
  float: left;
  width: 60%;
}

#see_more {
  float: right;
  width: 30%;
}

#follow_us {
  float: right;
}

.hide {
  display: none;
}

#locator {
  float: left;
  width: 45%;
}

#newsletter {
  float: right;
  width: 50%;
  height: 155px;
  margin-top: -30px;
  padding-left: 15px;
  border-left: 1px dotted #333;
}

.fields {
  float: left;
}

.computer {
  float: right;
  margin-top: 5px;
  margin-right: 5px;
}

.map {
  float: right;
  margin-top: -30px;
  margin-right: 10px;
  margin-bottom: 20px;
}

#locator {
  margin-left: 10px;
}

#locator .button {
  margin-top: 15px;
  margin-bottom: 10px;
}

#events {
  float: left;
  width: 58%;
}

#twitter {
  float: right;
  width: 38%;
  min-height: 440px;
  padding-left: 15px;
  border-left: 1px dotted #333;
  margin-right: 7px;
}

.field {
  border: 1px solid #C3C3C3;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  background: #FBFBFB;
  -webkit-transition: border linear .2s,box-shadow linear .2s;
  -moz-transition: border linear .2s,box-shadow linear .2s;
  transition: border linear .2s,box-shadow linear .2s;
  color: #333;
  outline: medium none;
  width: 155px;
  margin-top: 5px;
  padding: 5px;
  display: block;
}

.button {
  color: #f65e38;
  display: inline-block;
  background-color: #E6E6E6;
  background-repeat: no-repeat;
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(0.25, #ffffff), to(#e6e6e6));
  background-image: -webkit-linear-gradient(#ffffff, color-stop(0.25, #ffffff), #e6e6e6);
  background-image: -moz-linear-gradient(#ffffff, color-stop(#ffffff, 0.25), #e6e6e6);
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  font-size: 11px;
  font-weight: bold;
  line-height: 16px;
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-bottom-color: rgba(0, 0, 0, 0.25);
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-transition: 0.1s linear all;
  -moz-transition: 0.1s linear all;
  transition: 0.1s linear all;
  cursor: pointer;
  width: 100px;
}

.link, .link:visited, .link:hover, .link:active {
  color: #f65e38;
  text-decoration: none;
  font-size: 10px;
  background: none;
}

.separator {
  border-bottom: 1px dotted #333;
  clear: both;
  margin-top: 5px;
  padding-top: 10px;
}

.clear {
  clear: both;
}

.event {
  display: none;
}

.tweet {
  padding-top: 5px;
}

.tweet .date {
  color: #1c1c1c;
  font-size: 10px;
}

.player {
  float: left;
  width: 65%;
}

.details {
  float: right;
  width: 35%;
  height: 225px;
}

.promotion {
  border: 1px solid #c2b4b4;
  height: 74px;
  margin: 10px;
}

.promotion img {
  float: left;
  width: 20%;
}

.promotion_details {
  float: right;
  width: 76%;
  padding: 5px;
}

#transparent_map {
  position: absolute;
  z-index: 30;
  width: 520px;
  height: 280px;
  border: none;
}

#transparent_shield {
  position: absolute;
  z-index: 30;
  width: 520px;
  height: 250px;
  border: none;
}

#fb-root {
  clear: both;
}

